update Server Api
