# src/routes/ProfileRoute.ts
@@ -1,9 +1,10 @@
 import express from 'express';
 import ProfileController from '../controllers/ProfileController';
+import authMiddleware from '../middleware/AuthMiddleware';
 
 const router = express.Router();
 
-router.get('/:id', ProfileController.getProfile);
+router.get('', authMiddleware ,ProfileController.getProfile);
 
 
 export default router;
